# origin-cli

./: .gitignore  BUNDLING.md  CONSTITUTION.md  HUB.md  INSTALL.md  README.md  pyproject.toml
.agents/: hub_registry_plan.md
dummy/agent/: test.agent.md
dummy_asset/: hub-manifest.json  test.agent.md
origin_cli/: __init__.py  constants.py  main.py  utils.py
origin_cli/commands/: check.py  extension.py  hub.py  init.py  init_project.py  migrate.py  preset.py  reset.py  setup.py
origin_cli/generators/extension/: assets.py  base.py  builder.py  commands_gen.py  context.py  docs.py  hooks.py  manifest.py  mcp.py  (+4 more)
origin_cli/hub/: __init__.py  auth.py  client.py  discovery.py  installer.py  llm_discovery.py  packager.py
origin_cli/installer/: base.py  file_utils.py  github_installers.py  manager.py  mcp_installer.py  models.py  preset_manager.py  preset_registry.py  preset_remover.py  preset_status.py  registry.py  remover.py  speckit_wrapper.py  status.py
origin_cli/integrations/: agent_forge.py  headroom.py  prerequisites.py  speckit.py
sample_workflow/: sre-runbook.instructions.md
templates/agents/: agent-writer.agent.md  brownfield-planner.agent.md  greenfield-planner.agent.md  instruction-writer.agent.md
templates/prompts/: agent-writer.prompt.md  forge-analyze.prompt.md  forge-create.prompt.md  hook-writer.prompt.md  instruction-writer.prompt.md  mcp-writer.prompt.md  prompt-writer.prompt.md  skill-writer.prompt.md  workflow-writer.prompt.md
tests/: test_extension_generator.py  test_installer.py  test_preset_generator.py  test_preset_installer.py
(+27 files in other folders)
